--- a/About.html
+++ b/About.html
@@ -3,7 +3,7 @@
 <head>
 <title> Hello darkness my old friend </title>
 <link rel="stylesheet" type="text/css"
-href="C:\Users\maxte\Desktop\Programmmm\styles.css">
+href="styles.css">
   </head>
   <body>
     <div id="header">
@@ -19,7 +19,7 @@ href="C:\Users\maxte\Desktop\Programmmm\styles.css">
     <div class="container">
       <div class="about">
        <div class="about-autor">
-  <img src="C:\Users\maxte\Desktop\Programmmm\photo_2020-04-03_16-12-320320.png">
+  <img src="photo_2020-04-03_16-12-320320.png">
 </div>
 <h1 class="about-title"> Wtf is this? </h1>
 <div class="about-content">
