--- a/About.html
+++ b/About.html
@@ -10,7 +10,7 @@ href="styles.css">
     <div class="container">
       <a id="header-title" href="index.html">My blog</a>
       <ul id="header-nav">
-      <li><a href="about.html">About</a></li>
+      <li><a href="About.html">About</a></li>
       <li><a href="mailto:maxtesl@hotmail.com?subject=feedback">Contact</a></li>
       </ul>
     </div>
